<resources>
    <string name="app_name">Bandolier</string>

    <string name="login_error_message">Please enter a valid username/password</string>
    <string name="signup_error_message">User names must be at least 5 characters, Passwords must be at least 8 characters</string>
    <string name="password_error_message">Passwords don\'t match</string>
    <string name="signup_error_title">Yikes!</string>

    <string name="app_title">Bandolier</string>
    <string name="dev_title">A YukiDev Project</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Bullet</string>
    <string name="action_write_bullet">Write Bullet</string>
    <string name="action_save_bullet">Save Bullet</string>

    <string name="title_activity_login">Login</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="log_in">Login</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="forgot_password_text">forgot Password?</string>

    <string name="squadron_hint_sign_up">Squadron</string>
    <string name="email_hint_sign_up">eMail address</string>
    <string name="button_sign_up">Signup!</string>

    <string name="title_activity_airman_bullets">Your Bullets</string>
    <string name="title_activity_view_message">View Bullet</string>
    <string name="title_activity_message">Write Bullet</string>
    <string name="title_activity_edit_account">Edit Account</string>

    <string name="no_messages">Swipe down to refresh your bullet repository</string>

    <string name="completely_delete_message">This will COMPLETELY delete this bullet, there is no undo!</string>
    <string name="delete_request_or_bullet_title">Delete Bullet?</string>
    <string name="request_or_bullet_deleted">Bullet deleted.</string>

    <string name="bullet_title">Add a title</string>
    <string name="action_hint">Action: (what you did...)</string>
    <string name="result_hint">Result: (What happened...)</string>
    <string name="impact_hint">Impact: (What did this action impact?)</string>

    <string name="action_send_menu">Send</string>
    <string name="success_message">Message sent!</string>
    <string name="send_error_title">Problem uploading message</string>
    <string name="sorry">We/\'re sorry!</string>

    <string name="welcome_action_message">Glad you made it! The screen you just came from is your bullet repository.  Bullets that you add will show up there and are stored online. When you create a bullet, it may not be immediately listed in your list because it takes a minute to save in the cloud.</string>
    <string name="welcome_result_message">This screen is where you\'ll view or write bullets.  To write a bullet, tap the pencil on the actionBar.  To view a bullet, just tap it! (And apparently you already did since you see this message!)</string>
    <string name="welcome_impact_message">To delete this bullet, long press it on the bullet repository screen.  Once you delete a bullet, it is GONE.  Like forever - so before you do, just make sure that you really want to delete it.</string>

    <string name="new_password">New password</string>
    <string name="current_email">Current Email</string>
    <string name="password_again_hint">Password again</string>
    <string name="help_text">Version 2.0.0 \n\n If you have problems with this app email yuki.developers@gmail.com. \n \n
        If you find this free app helpful, click an ad to support us!</string>
    <string name="password_change_empty_toast">Please fill out all three password fields, then click the button</string>
    <string name="new_password_length_error_toast">Passwords must be at least 8 characters</string>
    <string name="password_changed_toast">Password changed</string>

    <string name="hello_world">Hello world!</string>
    <string name="password_reset_email_sent_toast">Password reset email sent</string>
    <string name="forgot_password_email_hint">Enter your email address</string>
    <string name="forgot_email_dialog_title">Forgot Password?</string>
    <string name="forgot_email_problem_toast_message">"There is a problem: "</string>
    <string name="cancel">CANCEL</string>
    <string name="internet_connection_unavailable">Internet connection unavailable</string>
    <string name="log_out">Log out</string>
    <string name="email_checkbox_summary">Check this box to add a default email address to send your bullets to</string>
    <string name="email_checkbox_title">Add default Email address?</string>

    <string name="pref_email_edittext_dialog">Enter an Email address</string>
    <string name="pref_email_edittext_title">Email Address</string>

    <string name="pref_edittext_hint">Bob@abcd.com</string>
    <string name="alertdialog_email_message">Enter as many email addresses you wish to send your bullets to, separated by semi-colons (;) i.e. jim@abc.com; bob@abc.com; etc.</string>
    <string name="alertdialog_email_hint">Email addresses . . .</string>
    <string name="alertdialog_email_title">Email Bullets</string>
    <string name="settings_activity_label">Options</string>
</resources>
