<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@drawable/bg_gradient"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:background="@drawable/bandolier"
                tools:context="com.yukidev.bandolier.ui.MessageActivity">


        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/TextLinearLayout"
            android:layout_weight="1"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/titleText"
                android:hint="@string/bullet_title"
                android:maxLines="2"
                style="@style/EditText"/>
            <requestFocus />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/TextLinearLayout"
            android:layout_weight="6"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/actionText"
                android:hint="@string/action_hint"
                style="@style/EditText"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/TextLinearLayout"
            android:layout_weight="6"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/resultText"
                android:hint="@string/result_hint"
                style="@style/EditText"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/TextLinearLayout"
            android:layout_weight="6"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/impactText"
                android:hint="@string/impact_hint"
                style="@style/EditText"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>